--- a/app/Resources/views/projects/index.html.twig
+++ b/app/Resources/views/projects/index.html.twig
@@ -1,4 +1,4 @@
-<h1>{{ projects |length }} projects</h1>
+<h1>{{ projects |length }} projects saved</h1>
 <ul>
     {% for project in projects %}
     <li>
